--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "@anikin/parcel-transformer-handlebars": "^1.0.9",
+    "@unofficial-parcel-nightly/transformer-toml": "^2.0.0-alpha.3.2-28-g49b4f40b-test1",
     "express-handlebars": "^6.0.6",
     "handlebars": "^4.7.7",
     "parcel-transformer-hbs": "^1.0.4",
