--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
   "devDependencies": {
     "@anikin/parcel-transformer-handlebars-precompile": "^1.0.1",
     "@parcel/transformer-sass": "^2.7.0",
+    "@typescript-eslint/parser": "^5.42.0",
+    "eslint": "^8.26.0",
     "express": "^4.18.2",
-    "parcel": "^2.7.0"
+    "parcel": "^2.7.0",
+    "stylelint": "^14.14.1",
+    "typescript": "^4.8.4"
   },
   "targets": {
     "default": {
