--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
   },
   "dependencies": {
     "@anikin/parcel-transformer-handlebars": "^1.0.9",
+    "@types/uuid": "^8.3.4",
     "@unofficial-parcel-nightly/transformer-toml": "^2.0.0-alpha.3.2-28-g49b4f40b-test1",
     "express-handlebars": "^6.0.6",
     "handlebars": "^4.7.7",
     "parcel-transformer-hbs": "^1.0.4",
-    "sass": "^1.55.0"
+    "sass": "^1.55.0",
+    "uuid": "^9.0.0"
   },
   "engines": {
     "node": "^14.17.6"
